# aiml_unitree_go1

./: README.md
unitree_ros_to_real/unitree_legged_real/: CMakeLists.txt
unitree_uofa/: CMakeLists.txt  package.xml
unitree_uofa/launch/: uofa.launch
unitree_uofa/src/: green_ball.cpp  joystick_listener.cpp  movement.cpp
