<?xml version="1.0"?>
<package format="2">
  <name>unitree_uofa</name>
  <version>1.0.0</version>
  <description>
    Package for stuff
  </description>

  <maintainer email="lachlan.mares@adelaide.edu.au">Something</maintainer>

  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>unitree_legged_sdk</build_depend>
  <build_depend>unitree_ros_to_real</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>unitree_legged_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>unitree_legged_sdk</build_export_depend>
  <build_export_depend>unitree_ros_to_real</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>unitree_legged_msgs</build_export_depend>

  <exec_depend>HighCmd</exec_depend>
  <exec_depend>HighState</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>unitree_legged_sdk</exec_depend>
  <exec_depend>unitree_ros_to_real</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>unitree_legged_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
